2016-10-16 Søren Højsgaard <sorenh@math.aau.dk>

	* gRbase rewritten using roxygen

	* New naming conventions for array-operations: The internal
	implementation names are like tabPerm, tabAdd etc. (they are visible to
	the user and are used in eg. gRain). But the names intended to be
	used by users are arperm aradd etc.

	* In binary array operations it is now being checked that the
	dimnames match.

	* Version 1.8-1 uploaded

2016-02-14 Søren Højsgaard <sorenh@math.aau.dk>

	* Fixed quotes in DESRIPTION file
	* Version 1.7-5 uploaded.
	
2016-02-14 Søren Højsgaard <sorenh@math.aau.dk>

	* Fixed issue about isinf in cpp files
	* Version 1.7-4 uploaded.
	
2015-12-31 Søren Højsgaard <sorenh@math.aau.dk>

	* moralizeMAT fails if matrix does not have dimnames. Fixed
	now. Thanks to David Edwards for reporting bug.
	* Version 1.7-3 uploaded.
	
2015-10-10 Søren Højsgaard <sorenh@math.aau.dk>

	* Corrected use of log and fabs in c++ code; thanks to BDR for
	pointing this out
	* get_subset_ added
	* ug2dag added (works only on graphNEL's)
	* Version 1.7-2 uploaded.

2015-08-20 Søren Højsgaard <sorenh@math.aau.dk>

	* is.adjMAT is now based on own c++ code; way faster.
	* get_superset_ and is_subsetof_ added.
	* names2pairsM added.
	* graph conversion utilities reworked.
	* check argument added to triangulate; controls if it is checked
	that a graph is triangulated.
	* New vignettes
	* Version 1.7-1 uploaded.

2014-06-26 Søren Højsgaard <sorenh@math.aau.dk>

	* tableSetSliceValue and tableGetSliceIndex functions added.
	* 'margin' in tableMargin can be a right-hand-sided formula.
	* Version 1.7-0.1 uploaded.

2014-03-17 Søren Højsgaard <sorenh@math.aau.dk>

	* Added array functions (arrayPerm, arrayMargin, arrayOp
	etc). These are implemented using Rcpp, they are not documented
	but illustrated in a vignette.
	* Many new implementations of graph/matrix operations with Rcpp.
	* Major cleanups
	* Version 1.7-0 uploaded.

2013-07-17 Søren Højsgaard <sorenh@math.aau.dk>
