@@ -1,5 +1,5 @@
 Package: gRbase
-Version: 1.8-1
+Version: 1.8-2
 Title: A Package for Graphical Modelling in R
 Author: Søren Højsgaard <sorenh@math.aau.dk>
 Maintainer: Søren Højsgaard <sorenh@math.aau.dk>
